# ruvector-au

./: Cargo.toml  package.json
router-cli/src/: main.rs
router-core/src/: error.rs  quantization.rs  storage.rs  vector_db.rs
router-ffi/src/: lib.rs
